# commando

./: .gitignore  LICENSE  README.md  README.zh-CN.md  install.sh  pyproject.toml  skills.json
.claude/: launch.json
commando/: __init__.py  build_skills.py  cli.py  connect_im_feishu.py  connect_obsidian.py  go_live.py  init.py  install_skill.py  onboard.py  run.py  schedule_install.py  status.py
commando/connectors/: __init__.py  obsidian.py
commando/runtime/: __init__.py  llm.py  memory.py  skill_runner.py
connectors/im-feishu/: README.md
dashboard/: README.md  app.js  index.html  server.py  styles.css
dashboard/mock-data/: draft-xhs-tue.md  instances.json
docs/: CONNECTORS-CONTRIBUTING.md  README.md  backend-driver.md  capabilities.md  charter.md  connectors.md  event-bus.md  example-onboarding-transcript.md  feishu-backend.md  feishu-im-setup.md  memory.md  playbook-vs-skill-boundary.md  scheduler.md  skill.md
examples/lemingle-growth-partner/: README.md  charter.md  credentials.example.yaml  schedule.yaml
landing/: index.html  zh-CN.html
my-agent/: README.md  charter.md  connectors.yaml  event-routing.yaml  schedule.yaml
my-agent/.onboarding/: calibration-decisions.md  discovery-notes.md  onboarding-record.md
my-agent/memory/episodic/: 2026-06-23.jsonl  2026-06-24.jsonl
playbooks/: _generic.md  growth-partner.md
registry/competitive-watch/: SKILL.md
registry/daily-briefing/: SKILL.md
registry/meeting-debrief/: SKILL.md
skills/onboarding/: SKILL.md
tools/: feishu-bitable-workbench-schema.json  materialize.py  route.py
(+8 files in other folders)
